Enhancements docs wip

--- a/docs/bib/mybib.bib
+++ b/docs/bib/mybib.bib
@@ -106,6 +106,12 @@
 	title        = {Jenkins (09/12/2021)},
 }
 
+@misc{Kafka,
+	author       = {{Apache}},
+	howpublished = {\url{https://kafka.apache.org/}},
+	title        = {Kafka (09/12/2021)},
+}
+
 
 
 
