--- a/docs/content/background.tex
+++ b/docs/content/background.tex
@@ -140,7 +140,7 @@ or Mean Time to Repair
 \subsubsection{CRD}
 %----------------------------------------------------------------------------
 
-for Chaos Mesh experiments?
+for Chaos Mesh experiments
 
 %----------------------------------------------------------------------------
 \subsection{Helm}
@@ -199,7 +199,7 @@ for Chaos Mesh experiments?
 %----------------------------------------------------------------------------
 
 %----------------------------------------------------------------------------
-\subsubsection{Scheduling experiments}
+\subsubsection{Scheduling Experiments}
 %----------------------------------------------------------------------------
 
 
