Finish enhancements docs

--- a/docs/bib/mybib.bib
+++ b/docs/bib/mybib.bib
@@ -112,6 +112,24 @@
 	title        = {Kafka (09/12/2021)},
 }
 
+@misc{ZooKeeper,
+	author       = {{Apache}},
+	howpublished = {\url{https://zookeeper.apache.org/}},
+	title        = {Zoo{K}eeper (10/12/2021)},
+}
+
+@misc{KafkaExporter,
+	author       = {{Daniel (Shijun) Qian}},
+	howpublished = {\url{https://github.com/danielqsj/kafka_exporter}},
+	title        = {Kafka {E}xporter (10/12/2021)},
+}
+
+@misc{SpringKafkaGuide,
+	author       = {{Baeldung}},
+	howpublished = {\url{https://www.baeldung.com/spring-kafka}},
+	title        = {Intro to {A}pache {K}afka with {S}pring (10/12/2021)},
+}
+
 
 
 
