--- a/docs/content/background.tex
+++ b/docs/content/background.tex
@@ -163,6 +163,11 @@ for Chaos Mesh experiments
 \subsection{Prometheus}
 %----------------------------------------------------------------------------
 
+\begin{itemize}
+	\item how it works
+	\item the concept of exporters
+\end{itemize}
+
 %----------------------------------------------------------------------------
 \subsubsection{PromQL} \label{background-promql}
 %----------------------------------------------------------------------------
