--- a/docs/content/sample-application.tex
+++ b/docs/content/sample-application.tex
@@ -48,7 +48,7 @@ Although the aim of the sample application is to attempt to provide a generalize
 
 For this project, a master-worker architecture was chosen, where the master component receives input from clients and then assigns computational tasks to the workers based on the parameters. The computation should be resource heavy (\eg require much CPU time) and should last for an easily measurable time (minimum 30-40 seconds). This architecture allows to easily define scalable, and both stateful and stateless components. The abstract workflow of the use case is the following:
 
-TODO: activity diagram?
+%TODO: activity diagram?
 
 \begin{enumerate}
 	\item \emph{Input submission} A client submits input parameters to the master component.
