Add some notes and references

--- a/docs/bib/mybib.bib
+++ b/docs/bib/mybib.bib
@@ -130,10 +130,42 @@
 	title        = {Intro to {A}pache {K}afka with {S}pring (10/12/2021)},
 }
 
+@techreport{AboveTheClouds,
+	author       = {Michael Armbrust, Armando Fox, Rean Griffith, Anthony D. Joseph, Randy Katz, Andy Konwinski, Gunho Lee, David Patterson, Ariel Rabkin, Ion Stoica, and Matei Zaharia},
+	title        = {Above the Clouds: A Berkeley View of Cloud Computing},
+	institution  = {UC Berkeley Reliable Adaptive Distributed Systems Laboratory},
+	year         = {2009},
+	month        = {February}
+}
 
+@article{SaaSOppRisk,
+	author       = {Alexander Benlian, Thomas Hess},
+	title        = {Opportunities and risks of software-as-a-service: Findings from a survey of IT executives},
+	journal      = {Decision Support Systems},
+	year         = {2011},
+	volume       = {52},
+}
 
+@misc{MicroservicesMF,
+	author		 = {Martin Fowler},
+	howpublished = {\url{https://martinfowler.com/articles/microservices.html}},
+	title        = {Microservices (23/01/2022)}
+}
 
+@inproceedings{ImplPatternsMicrosServices,
+	author       = {{Kyle Brown} and {Bobby Woolf}},
+	title 		 = {Implementation Patterns for Microservices Architectures},
+	year		 = {2016},
+	series		 = {HILLSIDE Proc. of Conf. on Pattern Lang. of Prog.},
+}
 
+@inproceedings{MicroservicesDocker,
+	author       = {{David Jaramillo},{Duy V Nguyen},{Robert Smart}},
+	title 		 = {Leveraging microservices architecture by using Docker technology},
+	year		 = {2016},
+	series		 = {SoutheastCon},
+	publisher    = {IEEE},
+}
 
 
 
