--- a/docs/content/background.tex
+++ b/docs/content/background.tex
@@ -3,20 +3,59 @@
 %----------------------------------------------------------------------------
 
 
-
-
 %----------------------------------------------------------------------------
-\section{Software as a Service}
+\section{Cloud Computing}
 %----------------------------------------------------------------------------
 
+\begin{itemize}
+	\item \cite{AboveTheClouds}
+	\begin{itemize}
+		\item refers to both the applications delivered as services over the Internet and the hardware and systems software in the data centers that provide those services (these are often referred as software as a service) - here we focus on the applications
+		\item cloud = data center hardware and software
+		\item public cloud vs private cloud
+		\item cloud pros - appearance of infinite computing resources, elasticity (to serve varying demand, or when demand is unknown), pay per use, transference of risk (of operation and of over/underprovisioning)
+		\item 
+	\end{itemize}
+\end{itemize}
 
+%----------------------------------------------------------------------------
+\subsection{Software as a Service}
+%----------------------------------------------------------------------------
+
+\begin{itemize}
+	\item https://en.wikipedia.org/wiki/Software\_as\_a\_service
+	\begin{itemize}
+		\item software delivery model (wikipedia)
+		\item software is licensed on a subscription basis (wikipedia)
+		\item software is centrally hosted (wikipedia)
+	\end{itemize}
+	\item \cite{AboveTheClouds}
+	\begin{itemize}
+		\item simplified software installation, maintainence, centralized control over versioning
+		\item users can access the service anywhere, anytime, share and collaborate easily, keep data stored safely
+		\item cloud computing allows deploying, scaling SaaS on demand
+	\end{itemize}
+	\item \cite{SaaSOppRisk}
+	\begin{itemize}
+		\item The SaaS model evolved from the application service provisioning (ASP) model, which emerged in the late 1990s as an on-demand software delivery option for (on-premise) commercial off-the-shelf application development. The ASP model involved vendor hosting, as well as managing and delivering application capabilities remotely from a data center accessed via the Internet. Technical issues that held ASP back during the 1990s included the initial design problems (i.e., few software applications were designed to be remotely accessible at that time), limited bandwidth availability, and slow Internet speeds. 
+		\item multitenant architecture, there is only a single instance of the common code and data definitions of a given application on the vendor's server.
+		\item the applications and infrastructure are shared across customers in the SaaS model
+		\item SaaS model constrains clients' customization options of the software's main functionality and data structures
+		\item it provides the vendor with more control over future development: 
+	\end{itemize}
+	
+\end{itemize}
 
 
 %----------------------------------------------------------------------------
 \section{Microservices}
 %----------------------------------------------------------------------------
 
-
+\begin{itemize}
+	\item \cite{MicroservicesMF}
+	\item \cite{ImplPatternsMicrosServices}
+	\item \cite{MicroservicesDocker}
+\end{itemize}
 
 
 %----------------------------------------------------------------------------
