--- a/docs/bib/mybib.bib
+++ b/docs/bib/mybib.bib
@@ -131,7 +131,7 @@
 }
 
 @techreport{AboveTheClouds,
-	author       = {Michael Armbrust, Armando Fox, Rean Griffith, Anthony D. Joseph, Randy Katz, Andy Konwinski, Gunho Lee, David Patterson, Ariel Rabkin, Ion Stoica, and Matei Zaharia},
+	author       = {{Michael Armbrust}, {Armando Fox}, {Rean Griffith}, {Anthony D. Joseph}, {Randy Katz}, {Andy Konwinski}, {Gunho Lee}, {David Patterson}, {Ariel Rabkin}, {Ion Stoica}, and {Matei Zaharia}},
 	title        = {Above the Clouds: A Berkeley View of Cloud Computing},
 	institution  = {UC Berkeley Reliable Adaptive Distributed Systems Laboratory},
 	year         = {2009},
