--- a/docs/bib/mybib.bib
+++ b/docs/bib/mybib.bib
@@ -131,7 +131,7 @@
 }
 
 @techreport{AboveTheClouds,
-	author       = {{Michael Armbrust}, {Armando Fox}, {Rean Griffith}, {Anthony D. Joseph}, {Randy Katz}, {Andy Konwinski}, {Gunho Lee}, {David Patterson}, {Ariel Rabkin}, {Ion Stoica}, and {Matei Zaharia}},
+	author       = {Michael Armbrust and Armando Fox and Rean Griffith and Anthony D. Joseph and Randy Katz and Andy Konwinski and Gunho Lee and David Patterson and Ariel Rabkin and Ion Stoica and Matei Zaharia},
 	title        = {Above the Clouds: A Berkeley View of Cloud Computing},
 	institution  = {UC Berkeley Reliable Adaptive Distributed Systems Laboratory},
 	year         = {2009},
@@ -139,7 +139,7 @@
 }
 
 @article{SaaSOppRisk,
-	author       = {Alexander Benlian, Thomas Hess},
+	author       = {Alexander Benlian and Thomas Hess},
 	title        = {Opportunities and risks of software-as-a-service: Findings from a survey of IT executives},
 	journal      = {Decision Support Systems},
 	year         = {2011},
@@ -153,14 +153,14 @@
 }
 
 @inproceedings{ImplPatternsMicrosServices,
-	author       = {{Kyle Brown} and {Bobby Woolf}},
+	author       = {Kyle Brown and Bobby Woolf},
 	title 		 = {Implementation Patterns for Microservices Architectures},
 	year		 = {2016},
 	series		 = {HILLSIDE Proc. of Conf. on Pattern Lang. of Prog.},
 }
 
 @inproceedings{MicroservicesDocker,
-	author       = {{David Jaramillo},{Duy V Nguyen},{Robert Smart}},
+	author       = {David Jaramillo and Duy V Nguyen and Robert Smart},
 	title 		 = {Leveraging microservices architecture by using Docker technology},
 	year		 = {2016},
 	series		 = {SoutheastCon},
