Text fixes, todos

--- a/docs/content/background.tex
+++ b/docs/content/background.tex
@@ -53,8 +53,22 @@
 
 \begin{itemize}
 	\item \cite{MicroservicesMF}
+	\begin{itemize}
+		\item in short, the microservice architectural style [1] is an approach to developing a single application as a suite of small services, each running in its own process and communicating with lightweight mechanisms, often an HTTP resource API. These services are built around business capabilities and independently deployable by fully automated deployment machinery. There is a bare minimum of centralized management of these services, which may be written in different programming languages and use different data storage technologies.
+		\item Componentization via Services
+		\item Organized around Business Capabilities
+		\item Smart endpoints and dumb pipes
+		\item Decentralized Governance
+		\item Decentralized Data Management
+	\end{itemize}
 	\item \cite{ImplPatternsMicrosServices}
+	\begin{itemize}
+		\item
+	\end{itemize}
 	\item \cite{MicroservicesDocker}
+	\begin{itemize}
+		\item
+	\end{itemize}
 \end{itemize}
 
 
