--- a/docs/content/background.tex
+++ b/docs/content/background.tex
@@ -173,6 +173,8 @@ or Mean Time to Repair
 \subsubsection{Pod}
 %----------------------------------------------------------------------------
 
++ assigning Pods to Nodes (PodAffinity)
+
 %----------------------------------------------------------------------------
 \subsubsection{ReplicaSet}
 %----------------------------------------------------------------------------
@@ -201,6 +203,14 @@ for Chaos Mesh experiments
 
 %----------------------------------------------------------------------------
 \subsection{AWS}
+%----------------------------------------------------------------------------
+
+%----------------------------------------------------------------------------
+\subsubsection{CloudFormation}
+%----------------------------------------------------------------------------
+
+%----------------------------------------------------------------------------
+\subsubsection{EKS}
 %----------------------------------------------------------------------------
 
 
