--- a/docs/bib/mybib.bib
+++ b/docs/bib/mybib.bib
@@ -167,5 +167,26 @@
 	publisher    = {IEEE},
 }
 
+@techreport{FundamentalConceptsOfDependability,
+	author       = {Avizienis A and Laprie J-C and Randell B},
+	title        = {Fundamental Concepts of Dependability},
+	institution  = {Department of Computing Science, University of Newcastle upon Tyne},
+	year         = {2001},
+	number		 = {739},
+}
+https://inf.mit.bme.hu/sites/default/files/materials/category/kateg%C3%B3ria/oktat%C3%A1s/bsc-t%C3%A1rgyak/informatikai-rendszertervez%C3%A9s/20/09-RETE-Safety-Requirements.pdf
+
+@misc{DependabilityBMEMIT,
+	author		 = {István Majzik},
+	howpublished = {\url{https://inf.mit.bme.hu/sites/default/files/materials/category/kateg%C3%B3ria/oktat%C3%A1s/bsc-t%C3%A1rgyak/informatikai-rendszertervez%C3%A9s/20/09-RETE-Safety-Requirements.pdf}},
+	title        = {Safety Requirements},
+}
+
+@misc{RobertMartinOOP,
+	author		 = {Robert Martin},
+	howpublished = {\url{http://butunclebob.com/ArticleS.UncleBob.PrinciplesOfOod}},
+	title		 = {Principles of Object Oriented Design},
+}
+
 
 
